<resources>
    <string name="abort">Przerwij</string>
    <string name="add">Dodaj</string>
    <string name="agenda_lesson_changes">Zmiany planu lekcji</string>
    <string name="agenda_teacher_absence">Nieobecni nauczyciele</string>
    <string name="ago_format">%s temu</string>
    <string name="app_manager_dialog_text">System oszczędza baterię, ograniczając działanie aplikacji w tle. Może to opóźniać synchronizację automatyczną lub całkiem ją wstrzymywać.\n\nKliknij OK, aby wyłączyć optymalizację baterii dla aplikacji Szkolny.eu.</string>
    <string name="app_manager_dialog_title">Synchronizacja w tle</string>
    <string name="app_manager_open_failed">Nie udało się otworzyć ustawień</string>
    <string name="app_name" translatable="false">Szkolny.eu</string>
    <string name="app_task_format" translatable="false">Szkolny.eu | %s</string>
    <string name="are_you_sure">Czy na pewno?</string>
    <string name="attendance_absent" translatable="false">nb</string>
    <string name="attendance_absent_excused" translatable="false">u</string>
    <string name="attendance_belated" translatable="false">sp</string>
    <string name="attendance_belated_excused" translatable="false">su</string>
    <string name="attendance_config_group_consecutive_days">Grupuj kolejne dni na liście</string>
    <string name="attendance_config_show_presence_in_month">Wyświetlaj obecność w widoku miesięcy</string>
    <string name="attendance_config_title">Konfiguracja frekwencji</string>
    <string name="attendance_config_use_symbols">Używaj symboli i kolorów wg dziennika</string>
    <string name="attendance_config_use_symbols_hint">Widoczne po rozwinięciu listy</string>
    <string name="attendance_empty_text">Nie ma tutaj żadnych nieobecności.</string>
    <string name="attendance_free_day" translatable="false">w</string>
    <string name="attendance_lesson_number_format">lekcja %d</string>
    <string name="attendance_percentage_format">%.2f%%</string>
    <string name="attendance_period_summary_format">Obecność w tym okresie: %.2f%%</string>
    <string name="attendance_present" translatable="false">ob</string>
    <string name="attendance_released" translatable="false">zw</string>
    <string name="attendance_summary_title_semester_format">Podsumowanie - semestr %d </string>
    <string name="attendance_summary_title_year">Podsumowanie - cały rok </string>
    <string name="attendance_tab_days">Dni</string>
    <string name="attendance_tab_list">Lista</string>
    <string name="attendance_tab_months">Miesiące</string>
    <string name="attendance_tab_summary">Podsumowanie</string>
    <string name="attendances_absent">Nieobecności:</string>
    <string name="attendances_absent_unexcused">W tym nieusprawiedliwione:</string>
    <string name="attendances_belated">Spóźnienia:</string>
    <string name="attendances_no_data">Nie masz żadnych nieobecności.</string>
    <string name="attendances_present">Obecności:</string>
    <string name="attendances_releases">Zwolnienia:</string>
    <string name="attendances_summary_subject_loading_format">Wszystkie przedmioty</string>
    <string name="attendances_summary_title_loading_format">Podsumowanie - ładowanie…</string>
    <string name="back">Wróć</string>
    <string name="bell_sync_adjust_content">Dostosuj wartość przesunięcia dzwonka. Format: ±H:MM:SS</string>
    <string name="bell_sync_adjust_error">Nieprawidłowy format</string>
    <string name="bell_sync_break_item">przerwa (%s)</string>
    <string name="bell_sync_cannot_now">Synchronizacja jest niemożliwa, ponieważ teraz nie ma żadnych lekcji. Spróbuj jeszcze raz np. pod koniec lekcji albo przerwy. Pamiętaj, że powinieneś to uruchomić jeszcze przed planowanym czasem dzwonka.</string>
    <string name="bell_sync_choose_howto">Wybierz najbliższy dzwonek, abyś mógł go zsynchronizować z aplikacją.</string>
    <string name="bell_sync_current_dialog">"\n\nAktualna kalibracja to %s"</string>
    <string name="bell_sync_howto">Kliknij w ikonę dzwonka, kiedy dzwonek zadzwoni. Licznik czasu zostanie zsynchronizowany z czasem dzwonka.\n\nCzas według planu to %s\n\nAktualna różnica wynosi %s</string>
    <string name="bell_sync_lesson_item">lekcja %s (%s)</string>
    <string name="bell_sync_reset_confirm">Czy na pewno zresetować synchronizację?</string>
    <string name="bell_sync_results">Dzwonek jest niedokładny o %s</string>
    <string name="bell_sync_time_title">Godzina dzwonka do synchronizacji</string>
    <string name="bell_sync_title">Synchronizacja z dzwonkiem</string>
    <string name="calendar_app_not_found">Nie znaleziono aplikacji kalendarza</string>
    <string name="cancel">Anuluj</string>
    <string name="card_action_move_down">Przesuń w dół</string>
    <string name="card_action_move_up">Przesuń w górę</string>
    <string name="card_events_header_title">Najbliższe wydarzenia</string>
    <string name="card_grades_button">Przejdź do ocen</string>
    <string name="card_grades_header_title">Najnowsze oceny</string>
    <string name="card_grades_no_data">Brak ocen do wyświetlenia</string>
    <string name="card_lucky_number_not_set">Kliknij, aby ustawić swój numerek.</string>
    <string name="card_lucky_number_set_text">Ustaw swój numer w dzienniku szkolnym:</string>
    <string name="card_lucky_number_set_title">Twój numer</string>
    <string name="card_lucky_number_text_format">Twój numerek to %d.</string>
    <string name="card_lucky_number_title_format">%d to dzisiejszy Szczęśliwy numerek.</string>
    <string name="card_timetable_button">Przejdź do planu</string>
    <string name="card_timetable_event_overview">Wydarzenia:</string>
    <string name="card_timetable_event_overview_format" translatable="false">\n%s %s - %s</string>
    <string name="card_timetable_following">Za chwilę:</string>
    <string name="card_timetable_header_title">Plan lekcji na dzisiaj</string>
    <string name="card_timetable_lesson_duration">Czas trwania lekcji</string>
    <string name="card_timetable_lesson_duration_format" translatable="false">%s - %s</string>
    <string name="card_timetable_lesson_overview"><![CDATA[Pierwsze lekcje:<br>%s %s<br>%s %s]]></string>
    <string name="card_timetable_lesson_overview_ongoing"><![CDATA[Następne lekcje:<br>%s %s<br>%s %s]]></string>
    <string name="card_timetable_no_data">Brak lekcji tego dnia</string>
    <string name="card_timetable_no_timetable">Brak planu lekcji</string>
    <string name="card_timetable_now">Teraz:</string>
    <string name="card_timetable_title">Plan lekcji na %s</string>
    <string name="card_timetable_wtf">Koniec lekcji! To nie powinno się nigdy pokazać!</string>
    <string name="card_timetable_wtf_report">Zgłoś błąd!</string>
    <string name="card_type_events">Najbliższe wydarzenia</string>
    <string name="card_type_grades">Ostatnie oceny</string>
    <string name="card_type_lucky_number">Szczęśliwy numerek</string>
    <string name="card_type_timetable">Plan lekcji</string>
    <string name="card_update_button">Pobierz</string>
    <string name="card_update_text_format">Posiadasz wersję %s, dostępna jest %s.</string>
    <string name="card_update_title">Dostępna jest aktualizacja</string>
    <string name="choose_file">Wybierz plik</string>
    <string name="choose_profile">Wybierz profil</string>
    <string name="close">Zamknij</string>
    <string name="compose">Napisz</string>
    <string name="compose_title">Napisz</string>
    <string name="concat_2_strings" translatable="false">%s%s</string>
    <string name="configure">Konfiguruj</string>
    <string name="copied_to_clipboard">Skopiowano do schowka</string>
    <string name="copy_to_clipboard">Skopiuj do schowka</string>
    <string name="counter_activity_sync">Synchronizuj</string>
    <string name="crash_advice_info">Jeśli aplikacja nie chce się uruchomić, możesz spróbować ponownie pobrać dane. Kliknij na przycisk, a następnie Restartuj aplikację.</string>
    <string name="crash_details">Szczegóły błędu</string>
    <string name="crash_dev_message">Wiadomość od dewelopera</string>
    <string name="crash_feature">It\'s not a bug. It\'s a feature!</string>
    <string name="crash_notice">Proszę, wyślij zgłoszenie błędu.</string>
    <string name="crash_report">Zgłoś błąd</string>
    <string name="crash_report_cannot_send">"Nie można wysłać zgłoszenia: "</string>
    <string name="crash_report_sent">Wysłano zgłoszenie błędu</string>
    <string name="crash_restart">Restartuj aplikację</string>
    <string name="crash_sync_button">Synchronizuj</string>
    <string name="crash_title">E-dziennik:\nWystąpił nieoczekiwany błąd.\nPrzepraszamy za problem.</string>
    <string name="date_relative_format" translatable="false">%s - %s</string>
    <string name="date_time_format" translatable="false">%s, %s</string>
    <string name="day_other_format" translatable="false">%s, %s</string>
    <string name="day_today_format">dzisiaj (%s)</string>
    <string name="day_tomorrow_format">jutro (%s)</string>
    <string name="debug_notice">Generalnie nie przejmuj się tym co tu widzisz.</string>
    <string name="dev_mode_enable_warning">Te ustawienia nie są przeznaczone dla zwykłych użytkowników, wyłącznie dla twórcy tej aplikacji.\n\nNie są nawet w żaden sposób opisane, nie wiadomo co robią, więc możesz nawet nie wiedzieć kiedy coś zepsujesz.\n\nWłączenie tych opcji może spowodować utratę danych w aplikacji, uszkodzenie twojego systemu lub nawet uruchomienie wirusa na baterii.\n\nLepiej uważaj.</string>
    <string name="developer_mode">Developer mode</string>
    <string name="dialog_averages_expected_format">Przewidywana średnia na semestr %d:\n%#.2f\n</string>
    <string name="dialog_averages_expected_yearly_format">Przewidywana średnia roczna:\n%#.2f\n</string>
    <string name="dialog_averages_final_format">Średnia ocen końcowych na semestr %d:\n%#.2f\n</string>
    <string name="dialog_averages_final_yearly_format">Średnia ocen rocznych końcowych:\n%#.2f\n</string>
    <string name="dialog_averages_format" translatable="false">%s%s%s\n%s%s%s\n%s%s%s</string>
    <string name="dialog_averages_proposed_format">Średnia ocen proponowanych na semestr %d:\n%#.2f\n</string>
    <string name="dialog_averages_proposed_yearly_format">Średnia ocen rocznych proponowanych:\n%#.2f\n</string>
    <string name="dialog_averages_title">Średnie ocen</string>
    <string name="dialog_averages_unavailable_format">Średnie ocen na semestr %d nie są dostępne</string>
    <string name="dialog_averages_unavailable_yearly">Roczna średnia ocen nie jest dostępna</string>
    <string name="dialog_day_date_format" translatable="false">%s, %s</string>
    <string name="dialog_day_lessons_info">%s - %s (%s lekcji - %s godzin %s minut)</string>
    <string name="dialog_day_no_events">Brak wydarzeń tego dnia.</string>
    <string name="dialog_error_details_title">Szczegóły błędu</string>
    <string name="dialog_event_details_added_by">Dodano</string>
    <string name="dialog_event_details_attachments">Załączniki</string>
    <string name="excuses_details_period">Okres</string>
    <string name="excuses_details_lessons">Lekcje</string>
    <string name="excuses_details_message">Treść</string>
    <string name="excuses_details_justified">Usprawiedliwione nieobecności</string>
    <string name="excuses_details_teachers">Powiadomieni nauczyciele</string>
    <string name="excuses_details_post_date">Wysłano</string>
    <string name="excuses_details_has_attachment">Zawiera załącznik</string>
    <string name="excuses_editor_scope">Usprawiedliw</string>
    <string name="excuses_editor_date_from">Od daty</string>
    <string name="excuses_editor_date_to">Do daty</string>
    <string name="excuses_editor_lessons">Lekcje</string>
    <string name="excuses_editor_lessons_empty">Brak lekcji w tym dniu.</string>
    <string name="excuses_editor_message">Treść (opcjonalnie)</string>
    <string name="excuses_editor_notify">Powiadom nauczycieli o planowanej nieobecności</string>
</resources>